--- a/今天.html
+++ b/今天.html
@@ -481,7 +481,7 @@
             display: block;
             margin: auto;
             width: 100%;
-            /*display: none;*/
+            display: none;
         }
     </style>
 
@@ -619,6 +619,7 @@
         <img id="canvasPic" src="" alt="" style="display: none;">
         <button id="nextBtn" class="fr">完成</button>
         <button id="back" class="fl">返回</button>
+        <button id="rotate" class="fl">旋转</button>
         <canvas id="canvas"></canvas>
     </div>
 </div>
